# flake8-future-annotations

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: test.yml
flake8_future_annotations/: checker.py
tests/: conftest.py  test_checker.py
tests/test_files/: ok_has_unrelated_asname_import.py
