[metadata]
name = flake8-future-annotations
version = 0.0.1
description = Verifies python 3.7+ files use from __future__ import annotations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/flake8-future-annotations
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = flake8

[options]
packages = find:
py_modules = flake8_future_annotations
install_requires =
    flake8
    setuptools
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.package_data]
flake8_future_annotations = py.typed

[options.entry_points]
flake8.extension =
    F = flake8_future_annotations.checker:FutureAnnotationsChecker

[mypy]
strict = True
show_error_codes = True

[pylint.MASTER]
load-plugins = pylint_strict_informational

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-docstring,
    # too-few-public-methods,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
