[metadata]
name = flake8-future-annotations
version = 1.1.0
description = Verifies python 3.8+ files use from __future__ import annotations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/flake8-future-annotations
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = flake8

[options]
packages = find:
py_modules = flake8_future_annotations
install_requires =
    flake8
    setuptools
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.package_data]
flake8_future_annotations = py.typed

[options.entry_points]
flake8.extension =
    FA = flake8_future_annotations.checker:FutureAnnotationsChecker

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = ignore-without-code

[mypy-tests.test_files.*]
ignore_errors = True
